agregue estilos a la seccion experiencia

--- a/index.html
+++ b/index.html
@@ -70,9 +70,14 @@
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-icon-link.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-icon.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-item.css">
-    <link rel="stylesheet" href="assets/css/experiencia/experiencia-link.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-lista.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-titulo.css">
+    <link rel="stylesheet" href="assets/css/experiencia/experiencia-link.css">
+    <link rel="stylesheet" href="assets/css/experiencia/experiencia-box.css">
+    <link rel="stylesheet" href="assets/css/experiencia/experiencia-box-links.css">
+    <link rel="stylesheet" href="assets/css/experiencia/experiencia-box-texto-parrafo.css">
+    <link rel="stylesheet" href="assets/css/experiencia/experiencia-box-texto-tiulo.css">
+    <link rel="stylesheet" href="assets/css/experiencia/experiencia-box-texto.css">
 </head>
 <body class="body">
     <div class="container">
@@ -270,14 +275,27 @@
                 <ul class="experiencia__lista">
                     <li class="experiencia__item">
                         <div class="experiencia__icon-link experiencia__icon-link--ahorcado"></div>
-                        <div>
-                            <div>
-                                <h4>titulo</h4>
-                                <p>descripcion</p>
+                        <div class="experiencia__box">
+                            <div class="experiencia__box-textos">
+                                <h4 class="experiencia__box-texto-titulo">Juego del ahorcado</h4>
+                                <p class="experiencia__box-texto-parrafo">Alura challenge hecho con HTML5, CSS3 y JavaScript</p>
                             </div>
-                            <div>
-                                <a class="experiencia__link" href="https://jdario9912.github.io/Juego-del-ahoracado-Alura/" target="_blank">repositorio</a>
-                                <a class="experiencia__link" href="https://jdario9912.github.io/Juego-del-ahoracado-Alura/" target="_blank">ver demo</a>
+                            <div class="experiencia__box-links">
+                                <a class="experiencia__link experiencia__link--repositorio" href="https://github.com/jdario9912/Juego-del-ahoracado-Alura" target="_blank">repositorio</a>
+                                <a class="experiencia__link experiencia__link--demo" href="https://jdario9912.github.io/Juego-del-ahoracado-Alura/" target="_blank">ver demo</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="experiencia__item">
+                        <div class="experiencia__icon-link experiencia__icon-link--encriptado"></div>
+                        <div class="experiencia__box">
+                            <div class="experiencia__box-textos">
+                                <h4 class="experiencia__box-texto-titulo">decodificador de texto</h4>
+                                <p class="experiencia__box-texto-parrafo">Alura challenge hecho con HTML5, CSS3 y JavaScript</p>
+                            </div>
+                            <div class="experiencia__box-links">
+                                <a class="experiencia__link experiencia__link--repositorio" href="https://github.com/jdario9912/Primer-challenge-Alura-Latam" target="_blank">repositorio</a>
+                                <a class="experiencia__link experiencia__link--demo" href="https://jdario9912.github.io/Primer-challenge-Alura-Latam/" target="_blank">ver demo</a>
                             </div>
                         </div>
                     </li>
